# 2023-autumn-ab-python-hw-14-team-dev-OlgaShish-main-2

./: Makefile  pyproject.toml  req.txt  sql_app.db
src/homework/: db_mock_methods.py  main.py  models.py  token.py  tps.py
tests/: test_app.py
