[build-system]
requires = ["setuptools>=68.1"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.urls]
"Homepage" = "https://github.com/central-university-dev/python-hw-10-template"
"Bug Tracker" = "https://github.com/central-university-dev/python-hw-10-template/issues"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
fastapi = "^0.105.0"
pydantic = "^2.5.3"
pyjwt = "^2.8.0"
httpx = "^0.26.0"
pytest-mock = "^3.12.0"
freezegun = "^1.4.0"
